# stacktracer

./: CMakeLists.txt  Makefile  README.md
src/: main.cpp  module.cpp  module.h  stacktracer.c  stacktracer.h
test/: runner.cpp  test_tracer.cpp  wrap.h
